# profilek

./: .gitignore  README.md  cfg.template.yaml  log_cfg.json  pyproject.toml
plugins/: test_plugin.py  test_plugin_two.py
profilek/: __main__.py  config.py  constants.py  exceptions.py  plugin_loader.py  profiler.py
profilek/data_loaders/: _csv.py  base.py  factory.py
profilek/profiles/: __init__.py  base.py  factory.py  utils.py
profilek/profiles/date/: profile.py
profilek/profiles/datetime/: profile.py
profilek/profiles/numeric/: profile.py
profilek/profiles/string/: profile.py
profilek/storage/: base.py  data.py  fs.py
profiling_results/: 1707655442_c24aef7d-bbe8-4d89-9c25-b85b618aaadc.json  1707656072_d6bc8179-386f-42c4-9b47-f352b800d8fc.json  1707656095_e58a5ffe-38bd-4ef8-95bb-6c37d031ad18.json  1707656215_30270a90-89ea-465b-aace-8f5243e46c32.json  1707656277_76d66eae-c77b-460e-b9f7-a38a79e36183.json
tests/resources/: cfg.yaml  example.csv
tests/unit/: test_config.py  test_csv_loader.py  test_dataloader_factory.py
